--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
+setuptools
 Django==4.2.1
 djangorestframework==3.14.0
 django-cors-headers==4.0.0
 django-filter==23.2
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
 whitenoise==6.11.0
 dj-database-url==3.0.1
